# AI-Coding-Skill-Bible

./: .gitignore  README.md
android-project-standard/: SKILL.md
android-project-standard/assets/templates/: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  build.gradle.kts  ci.sh  settings.gradle.kts
android-project-standard/assets/templates/adapters/: CLAUDE.md  build.gradle.kts
android-project-standard/assets/templates/app/: CLAUDE.md  build.gradle.kts
android-project-standard/assets/templates/config/detekt/: detekt.yml
android-project-standard/assets/templates/domain/: CLAUDE.md  build.gradle.kts
android-project-standard/assets/templates/gradle/: libs.versions.toml
android-project-standard/assets/templates/kernel/: CLAUDE.md  build.gradle.kts
android-project-standard/references/: standard.md
android-project-standard/scripts/: check_conformance.py  scaffold.py
frontend-project-standard/: SKILL.md
frontend-project-standard/assets/templates/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ci.sh  eslint.config.mjs  package.json  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
frontend-project-standard/references/: standard.md
frontend-project-standard/scripts/: check_conformance.py  scaffold.py
java-project-standard/: SKILL.md
java-project-standard/assets/templates/: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  build.gradle.kts  ci.sh  gradle.properties  settings.gradle.kts
java-project-standard/assets/templates/adapters/: CLAUDE.md  build.gradle.kts
java-project-standard/assets/templates/app/: CLAUDE.md  build.gradle.kts
java-project-standard/assets/templates/configs/: settings.json
java-project-standard/assets/templates/domain/: CLAUDE.md  build.gradle.kts
java-project-standard/assets/templates/gradle/: libs.versions.toml
java-project-standard/assets/templates/kernel/: CLAUDE.md  build.gradle.kts
java-project-standard/references/: standard.md
java-project-standard/scripts/: check_conformance.py  scaffold.py
polyglot-core-standard/: SKILL.md
polyglot-core-standard/assets/templates/: .gitattributes  CLAUDE.md  Makefile  ci.sh  versions.toml
polyglot-core-standard/assets/templates/apple/: .swift-format  .swiftlint.yml  CLAUDE.md  ci.sh
polyglot-core-standard/assets/templates/core/: CLAUDE.md  Cargo.toml  ci.sh  rust-toolchain.toml
polyglot-core-standard/assets/templates/core/crates/__REPO__-core/: Cargo.toml
polyglot-core-standard/assets/templates/core/crates/__REPO__-core/src/: lib.rs
polyglot-core-standard/assets/templates/core/crates/__REPO__-ffi/: Cargo.toml
polyglot-core-standard/assets/templates/core/crates/__REPO__-ffi/src/: lib.rs
polyglot-core-standard/assets/templates/core/crates/__REPO__-py/: Cargo.toml
polyglot-core-standard/assets/templates/core/crates/__REPO__-py/src/: lib.rs
polyglot-core-standard/assets/templates/python/: CLAUDE.md  ci.sh  pyproject.toml
polyglot-core-standard/assets/templates/python/src/__REPO__/: __init__.py  _native.pyi  client.py
polyglot-core-standard/assets/templates/scripts/: check_bindings.sh  gen_bindings.sh
polyglot-core-standard/references/: standard.md
polyglot-core-standard/scripts/: check_conformance.py  scaffold.py
python-project-standard/: SKILL.md
python-project-standard/assets/templates/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ci.sh  pyproject.toml
python-project-standard/assets/templates/configs/: settings.yaml
python-project-standard/assets/templates/docs/adr/: 0001-record-architecture-decisions.md
python-project-standard/assets/templates/scripts/: check_drift.py
python-project-standard/assets/templates/src_pkg/: __init__.py  cli.py
python-project-standard/assets/templates/src_pkg/adapters/: __init__.py  mock.py  openai_llm.py
python-project-standard/assets/templates/src_pkg/core/: __init__.py  logging.py  paths.py  prompts.py  settings.py
python-project-standard/assets/templates/src_pkg/ports/: __init__.py  exceptions.py  factory.py  protocols.py
python-project-standard/assets/templates/src_pkg/prompts/rag/: answer.md
python-project-standard/assets/templates/src_pkg/schemas/: __init__.py
python-project-standard/assets/templates/tests/: conftest.py  test_conformance.py  test_smoke.py
python-project-standard/references/: standard.md
python-project-standard/scripts/: check_conformance.py  scaffold.py
rust-project-standard/: SKILL.md
rust-project-standard/assets/templates/: CLAUDE.md  Cargo.toml  README.md  ci.sh  deny.toml  justfile
rust-project-standard/assets/templates/.github/workflows/: ci.yml
rust-project-standard/assets/templates/app/: CLAUDE.md  Cargo.toml
rust-project-standard/assets/templates/app/src/: main.rs
rust-project-standard/assets/templates/configs/: settings.toml
rust-project-standard/assets/templates/crates/adapters/: CLAUDE.md  Cargo.toml
rust-project-standard/assets/templates/crates/adapters/src/: lib.rs  mock.rs  openai.rs
rust-project-standard/assets/templates/crates/domain/: CLAUDE.md  Cargo.toml
rust-project-standard/assets/templates/crates/domain/src/: errors.rs  lib.rs  models.rs  ports.rs
rust-project-standard/assets/templates/crates/kernel/: CLAUDE.md  Cargo.toml
rust-project-standard/assets/templates/crates/kernel/src/: config.rs  lib.rs  logging.rs  prompts.rs
rust-project-standard/assets/templates/docs/adr/: 0001-record-architecture-decisions.md
rust-project-standard/references/: standard.md
rust-project-standard/scripts/: check_conformance.py  scaffold.py
rust-pyo3-project-standard/: SKILL.md
rust-pyo3-project-standard/agents/: openai.yaml
rust-pyo3-project-standard/references/: standard.md
rust-pyo3-project-standard/scripts/: check_conformance.py
swift-project-standard/: SKILL.md
swift-project-standard/assets/templates/: .env.example  .gitignore  .swift-format  .swiftlint.yml  CLAUDE.md  Makefile  Package.swift  README.md  ci.sh  project.yml
swift-project-standard/references/: standard.md
swift-project-standard/scripts/: check_conformance.py  scaffold.py
(+69 files in other folders)
