[project]
name = "__REPO__"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["pydantic>=2"]   # boundary models; the native ext is built from core/crates/__REPO__-py

[project.optional-dependencies]
# maturin builds the PyO3 extension (core/crates/__REPO__-py) into this package (`make gen-bindings`).
dev = ["mypy", "ruff", "pytest", "maturin>=1.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/__REPO__"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true

[tool.ruff]
src = ["src"]
# The generated PyO3 stub is a vendored artifact (non-negotiable 4) — never lint/format it.
# mypy still consumes it as the contract for the `__REPO__._native` module.
extend-exclude = ["src/__REPO__/_native.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM", "RUF"]
