[package]
name = "__REPO__-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true        # inherits forbid(unsafe_code): pure domain, no FFI, no unsafe

[dependencies]
thiserror.workspace = true
serde.workspace = true
# The canonical core: pure, host-agnostic domain logic + the data model. NO uniffi/pyo3 here —
# the binding crates (__REPO__-ffi, __REPO__-py) translate these types across the seam.
